--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,129 @@ body{
     grid-gap: 20px;
     margin-bottom: 4rem;
 }
+
+.title{
+    font-family: Georgia;
+    font-size: 6rem;
+    line-height: 1;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    grid-column: 1/4;
+}
+
+.animals h2 {
+    font-family: monospace;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    margin-bottom: 1rem;
+    color: #e54;
+}
+
+.animals h2::before{
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 10px;
+    margin-right: 10px;
+    background-color: #fb5;
+}
+
+.animals p{
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
+
+.animals-list {
+    height: 370px;
+    overflow-y: scroll; /*Barra de Scroll ao lado das imgs*/
+    grid-column: 2;
+
+}
+
+/*↓ Estilizando o Scrol ↓*/
+.animals-list::-webkit-scrollbar {
+    width: 18px;
+}
+
+.animals-list::-webkit-scrollbar-thumb {
+    /*Scrol que rola as imgs*/
+    background-color: #fb5;
+    border-left: 4px solid #fef6ed;
+    border-right: 4px solid #fef6ed;
+}
+
+.animals-list::-webkit-scrollbar-track {
+    /* Fundo do Scrol que rola as imgs*/
+    background-color: #fef6ed;
+}
+/*↑ Estilizando o Scrol ↑*/
+
+.descreption-animals {
+    grid-column: 3;
+}
+
+.grid-section select {
+    margin-bottom: 3rem;
+}
+
+.list-faq {
+    grid-column: 2/4;
+}
+
+.list-faq dt {
+    font-family: monospace;
+    font-weight: bold;
+    margin-top: 2rem;
+    margin-bottom: .5rem;
+    color: #e54;
+}
+
+.list-faq dt::before {
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    margin-right: 10px;
+    background-color: #fb5;
+}
+
+.list-faq dd {
+    font-family: Helvetica, Arial, sans-serif;
+    margin-bottom: .5rem;
+    margin-left: 30px;
+}
+
+.map {
+    grid-column: 2;
+}
+
+.data {
+    grid-column: 3;
+}
+
+.data li{
+    margin-bottom: 1rem;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.data li::before {
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    margin-right: 10px;
+    background-color: #fb5;
+}
+
+.footer {
+    grid-column: 3/5;
+    margin-bottom: 2rem;
+    background-color: #fb5;
+}
+
+.footer p {
+    padding: 20px;
+    font-family: monospace;
+}
