--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,31 @@ body{
     padding: 20px;
     font-family: monospace;
 }
+
+@media (max-width: 700px) {
+    body {
+        grid-template-columns: 1fr;
+    }
+    .menu, .grid-section, .footer {
+        grid-column: 1;
+    }
+    .grid-section {
+        grid-template-columns: 100px 1fr;
+        grid-gap: 10px;
+    }
+    .animals-list {
+        grid-column: 1;
+    }
+    .list-faq, .data, .map {
+        grid-column: 1/3;
+    }
+    .grid-section h1 {
+        font-size: 3rem;
+    }
+    .menu {
+        margin-top: 0px;
+    }
+    .footer {
+        margin-bottom: 0px;
+    }
+}
